tests/unit/language/errors/local_shadows_callable.arche
// A local binding must not shadow a global proc/func: a variable and a callable share the value
// namespace, so the bare name is ambiguous (reads resolve to the local, an assignment target to the
// callable — the silent footgun this rule kills). Here `greet` is a declared proc, so `greet := 1`
// is a hard error at the declaration. Shadowing a plain variable/param and the `:=` move-rebind
// idiom stay legal (those names aren't callables).
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "shadows the proc/func" %t.out
#import { fmt }
greet :: proc()() {
  fmt.printf("hi\n");
}
main :: proc() {
  greet := 1;
  fmt.printf("%d\n", greet);
}
